# napari-spot-detection

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
docs/: index.md
src/napari_spot_detection/: __init__.py  _image_processing.py  _widget.py  napari.yaml
src/napari_spot_detection/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
