[metadata]
name = napari-spot-detection

author = Alexis Coullomb
author_email = alexis.coullomb.pro@gmail.com
url = https://github.com/AlexCoul/napari-spot-detection
license = GPL-3.0-only
description = Interactive parameters selection and visualization of intermediate results for spot detection.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/AlexCoul/napari-spot-detection/issues
    Documentation = https://github.com/AlexCoul/napari-spot-detection#README.md
    Source Code = https://github.com/AlexCoul/napari-spot-detection
    User Support = https://github.com/AlexCoul/napari-spot-detection/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-spot-detection = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-spot-detection = napari_spot_detection:napari.yaml
